Categorize blockly block

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -102,7 +102,6 @@
         </shadow>
       </value>
     </block>
-
     <block type="minetest_add_text_node">
   	  <value name="x">
         <shadow type="math_number">
@@ -135,7 +134,6 @@
         </shadow>
       </value>
     </block>
-
     <block type="minetest_teleport">
       <value name="name">
         <block type="text"></block>
@@ -173,7 +171,9 @@
         </shadow>
       </value>
     </block>
+  </category>
 
+  <category name="TechMage Summons" colour="%{BKY_COLOUR_HUE}">
     <block type="minetest_add_entity">
       <value name="entity">
         <block type="minetest_sheep_entity"></block>
@@ -202,7 +202,6 @@
     <block type="minetest_turn">
       <field name="ACTION">turnRight();</field>
     </block>
-
     <block type="minetest_wait">
       <value name="seconds">
         <shadow type="math_number">
