--- a/blockly/app/assets/stylesheets/blocklies.scss
+++ b/blockly/app/assets/stylesheets/blocklies.scss
@@ -333,7 +333,7 @@ body.blocklies {
       bottom: 0;
       left: 0;
       z-index: 100;
-      width: 119px;
+      width: 130px;
       padding: 5px;
       background-color: #4e4e4e;
       color: #969292;
@@ -342,6 +342,14 @@ body.blocklies {
         font-size: 11px;
         width: 100%;
         height: 24px;
+      }
+    }
+
+    .blocklyTreeRoot {
+      [role=group] [role=treeitem]:nth-child(2) {
+        .blocklyTreeLabel {
+          font-size: 10px;
+        }
       }
     }
   }
