Add if ahead block (#11)

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -194,6 +194,11 @@
         </shadow>
       </value>
     </block>
+    <block type="minetest_mage_summons_if_ahead">
+      <value name="material">
+        <block type="minetest_dirt_block"></block>
+      </value>
+    </block>
     <block type="minetest_mage_summons_forever"></block>
     <block type="minetest_mage_summons_move_forward"></block>
     <block type="minetest_mage_summons_turn">
