Add if_not_ahead block  (#11)

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -199,6 +199,11 @@
         <block type="minetest_dirt_block"></block>
       </value>
     </block>
+    <block type="minetest_mage_summons_if_not_ahead">
+      <value name="material">
+        <block type="minetest_dirt_block"></block>
+      </value>
+    </block>
     <block type="minetest_mage_summons_forever"></block>
     <block type="minetest_mage_summons_move_forward"></block>
     <block type="minetest_mage_summons_turn">
