Add wait_combobox block (#7)

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -214,6 +214,7 @@
         </shadow>
       </value>
     </block>
+    <block type="minetest_mage_summons_wait_combobox"></block>
     <block type="minetest_mage_summons_disappear"></block>
     <block type="minetest_mage_summons_play_sound"></block>
     <block type="minetest_mage_summons_destroy_block"></block>
