Blockly: Hide ruby tab

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -44,8 +44,8 @@
           <td id="tab_blocks" class="tabon">...</td>
           <td class="tabmin">&nbsp;</td>
           <td id="tab_javascript" class="taboff">JavaScript</td>
-          <td class="tabmin">&nbsp;</td>
-          <td id="tab_ruby" class="taboff">Ruby</td>
+          <%# <td class="tabmin">&nbsp;</td> %>
+          <td id="tab_ruby" class="taboff" style="display:none;">Ruby</td>
           <td class="tabmin">&nbsp;</td>
           <td id="tab_xml" class="taboff">XML</td>
           <td class="tabmax">
