Blockly: Add login_id and updated_at to shared workspaces

--- a/blockly/app/assets/stylesheets/blocklies.scss
+++ b/blockly/app/assets/stylesheets/blocklies.scss
@@ -404,6 +404,18 @@ body.blocklies {
               color: #03A9F4;
             }
 
+            .user-name {
+              word-break: break-all;
+              padding: 0 5px;
+            }
+            .user-name,
+            .workspace-name {
+              font-weight: bold;
+            }
+            .updated-at {
+              font-size: 10px;
+            }
+
             .restore a {
               color: #189a1d;
             }
