Blockly: Sort workspaces

--- a/blockly/app/views/blocklies/workspaces/_index.html.erb
+++ b/blockly/app/views/blocklies/workspaces/_index.html.erb
@@ -42,8 +42,8 @@
     </div>
     <div class="col-sm-7 none-padding">
       <span class="updated-at"
-            title="<%= workspace.updated_at.strftime('%Y/%m/%d %H:%M') %>">
-        [<%= workspace.updated_at.strftime('%m/%d') %>]
+            title="<%= workspace.created_at.strftime('%Y/%m/%d %H:%M') %>">
+        [<%= workspace.created_at.strftime('%m/%d') %>]
       </span>
       <span class="workspace-name"><%= workspace.name %></span>
     </div>
