--- a/blockly/app/assets/stylesheets/application.scss
+++ b/blockly/app/assets/stylesheets/application.scss
@@ -17,6 +17,8 @@
 
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 html, body {
   height: 100%;
