Blockly: Add star to workspace

--- a/blockly/app/assets/stylesheets/blocklies.scss
+++ b/blockly/app/assets/stylesheets/blocklies.scss
@@ -379,12 +379,20 @@ body.blocklies {
             .icons {
               text-align: center;
 
+              .pin,
+              .star {
+                &.false {
+                  color: lightgray;
+                }
+              }
               .pin {
                 &.true {
                   color: red;
                 }
-                &.false {
-                  color: gray;
+              }
+              .star {
+                &.true {
+                  color: #EBC85D;
                 }
               }
             }
