--- a/blockly/app/assets/stylesheets/blocklies.scss
+++ b/blockly/app/assets/stylesheets/blocklies.scss
@@ -403,6 +403,38 @@ body.blocklies {
               font-weight: bold;
             }
 
+            .thumbs-up {
+              white-space: nowrap;
+              border: solid 1px #00000000;
+              border-radius: 11px;
+              padding: 2px 6px;
+              background-color: #F6F6F6;
+
+              &:hover {
+                border: solid 1px #8E8D8E;
+                background-color: #FFFFFF;
+              }
+              &.active {
+                border: solid 1px #4B9ACC;
+                background-color: #EAF5F9;
+
+                .count {
+                  color: #2E629E;
+                }
+              }
+
+              .icon {
+                color: #F6D976;
+                margin-right: -3px;
+              }
+              .count {
+                color: #2B2A2B;
+                font-size: 10px;
+                top: -2.5px;
+                position: relative;
+              }
+            }
+
             .public,
             .private {
               padding: 0;
