--- a/blockly/app/views/blocklies/workspaces/_index.html.erb
+++ b/blockly/app/views/blocklies/workspaces/_index.html.erb
@@ -7,7 +7,7 @@
                   remote: true,
                   class: 'decoration-none' do %>
         <i class="fas fa-thumbtack pin <%= workspace.pin %>"></i>
-      <% end %>
+      <% end if current_user.admin? %>
       <%= link_to workspace_emotion_path(
               workspace.id, :favorite,
               {type: workspace.my_favorite.present? ? :delete : :create}
@@ -68,7 +68,7 @@
                   remote: true,
                   class: 'decoration-none' do %>
         <i class="fas fa-thumbtack pin <%= workspace.pin %>"></i>
-      <% end %>
+      <% end if current_user.admin? %>
       <%= link_to workspace_emotion_path(
               workspace.id, :favorite,
               {type: workspace.my_favorite.present? ? :delete : :create}
