--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -9,8 +9,8 @@
 <div class="dashboard-wrap" id="dashboard_wrap">
   <div class="overlay" id="overlay"></div>
   <div class="dashboard" id="dashboard">
-    <div class="index mine" id="indexMine" data-index-type="mine">My Workspaces</div>
-    <div class="index share" id="indexShare" data-index-type="share">Shared Workspaces</div>
+    <div class="index mine" id="indexMine" data-index-type="mine"></div>
+    <div class="index share" id="indexShare" data-index-type="share"></div>
     <div class="workspace-form" id="workspace_form">
       <%= render "blocklies/workspaces/new" %>
     </div>
@@ -37,8 +37,24 @@
       </span>
     </td>
   </tr>
-  <tr id="workspace_header">
+  <tr class="workspace-header" id="workspace_header">
     <td colspan=2>
+      <span class="buttons">
+        <button id="trashButton" class="notext" title="...">
+          <%= image_tag("blocklies/1x1.gif", :class => "trash icon21") %>
+        </button>
+        <span class="spacer"></span>
+        <!-- <button id="linkButton" class="notext" title="...">
+          <%= image_tag("blocklies/1x1.gif", :class => "link icon21") %>
+        </button> -->
+        <%= form_tag(run_blocklies_path, remote: true, class: "flat") do %>
+          <button id="runButton" class="notext primary" title="...">
+            <%= image_tag("blocklies/1x1.gif", :class => "run icon21") %>
+          </button>
+          <div id="runParams"></div>
+          <%= token_tag %>
+        <% end %>
+      </span>
       <table width="100%">
         <tr id="tabRow" class="tab-row">
           <td id="tab_blocks" class="tabon">...</td>
@@ -48,21 +64,7 @@
           <td id="tab_ruby" class="taboff" style="display:none;">Ruby</td>
           <td class="tabmin">&nbsp;</td>
           <td id="tab_xml" class="taboff">XML</td>
-          <td class="tabmax">
-            <button id="trashButton" class="notext" title="...">
-              <%= image_tag("blocklies/1x1.gif", :class => "trash icon21") %>
-            </button>
-            <!-- <button id="linkButton" class="notext" title="...">
-              <%= image_tag("blocklies/1x1.gif", :class => "link icon21") %>
-            </button> -->
-            <%= form_tag(run_blocklies_path, remote: true, class: "flat") do %>
-              <button id="runButton" class="notext primary" title="...">
-                <%= image_tag("blocklies/1x1.gif", :class => "run icon21") %>
-              </button>
-              <div id="runParams"></div>
-              <%= token_tag %>
-            <% end %>
-          </td>
+          <td class="tabmax"></td>
         </tr>
       </table>
     </td>
