--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -345,6 +345,22 @@
       </value>
     </block>
 
+    <block type="math_single">
+      <value name="NUM">
+        <shadow type="math_number">
+          <field name="NUM">9</field>
+        </shadow>
+      </value>
+    </block>
+
+    <block type="math_round">
+      <value name="NUM">
+        <shadow type="math_number">
+          <field name="NUM">3.1</field>
+        </shadow>
+      </value>
+    </block>
+
     <block type="math_modulo">
       <value name="DIVIDEND">
         <shadow type="variables_get">
