Blockly & Minetest: Add "add_node_on_player" block

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -111,6 +111,26 @@
         </shadow>
       </value>
     </block>
+    <block type="minetest_tech_mage_add_node_on_player">
+      <value name="material">
+        <block type="minetest_dirt_block"></block>
+      </value>
+      <value name="x">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+      <value name="y">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+      <value name="z">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+    </block>
     <block type="minetest_tech_mage_text_node">
   	  <value name="x">
         <shadow type="math_number">
