Blockly: Change website name

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -23,7 +23,7 @@
 <table width="100%" height="100%">
   <tr class="header" id="header">
     <td>
-      <h1>Blockly Meister</h1>
+      <h1>Blockly ModelTown</h1>
     </td>
     <td class="farSide">
       <!-- <button type="button"
