Blockly: Set default login_id

--- a/blockly/app/views/authentication/index.html.erb
+++ b/blockly/app/views/authentication/index.html.erb
@@ -2,6 +2,7 @@
   I'm
   <span class="name-field">
     <%= form.text_field :login_id,
+                        value: params[:name],
                         class: 'name',
                         id: 'name',
                         placeholder: 'your name' %>&nbsp;!
