--- a/blockly/app/assets/stylesheets/authentication.scss.erb
+++ b/blockly/app/assets/stylesheets/authentication.scss.erb
@@ -11,16 +11,17 @@
       bottom: 0px;
       left: 0px;
       margin: auto;
-      height: 352px;
-      font-size: 80px;
+      height: 262px;
+      font-size: 50px;
       text-align: center;
       font-weight: bold;
 
       .name-field {
         position: relative;
+        display: inline-block;
 
         .name {
-          width: 510px;
+          width: 384px;
           padding: 20px;
           text-align: center;
           background-color: rgba(255, 255, 255, 0.5);
@@ -31,8 +32,8 @@
         .hint {
           font-size: 16px;
           position: absolute;
-          top: -24px;
-          right: 54px;
+          top: 0;
+          right: 33px;
           background-color: #e40050;
           color: white;
           padding: 5px;
