--- a/blockly/app/assets/stylesheets/blocklies.scss
+++ b/blockly/app/assets/stylesheets/blocklies.scss
@@ -32,13 +32,13 @@ body.blocklies {
     .workspace-header {
       .buttons {
         height: 0;
-        text-align: center;
+        text-align: right;
         display: flow-root;
+      }
 
-        .spacer {
-          width: 200px;
-          display: inline-block;
-        }
+      .run-button-wrap {
+        border: none !important;
+        padding-left: 5px;
       }
     }
 
